# HyTechRacingLab

./: flake.nix  hellolib.nix
hellolib/: CMakeLists.txt
hellolib/cmake/: hello_worldConfig.cmake.in
hellolib/include/: HelloWorld.h
hellolib/src/: HelloWorld.cpp
